Fix #231: Truncate long location names in queue cards

--- a/imports/ui/components/queue-card/queue-card.scss
+++ b/imports/ui/components/queue-card/queue-card.scss
@@ -9,6 +9,14 @@
       opacity: 1;
     }
   }
+
+  .card-text {
+    display: flex;
+
+    .card-ticket-count {
+      white-space: nowrap;
+    }
+  }
 }
 
 .queue-card-pattern {
